compiler/lyra/src/test/resources/semantic_errors/ExtendInterface.ly
interface I {
    def m(x : Int) : Int;
}
class A extends I { }

class Application {
    def main { }
}